<resources>
    <string name="app_name">Booked</string>
    <string name="email_prompt">Email Address</string>
    <string name="email_confirm">Confirm Email Address</string>
    <string name="password_prompt">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="display_name_prompt">Display Name</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="cancel_button">Cancel</string>
    <string name="logout_button">Log out</string>
    <string name="forgot_password_button">Forgot Password?</string>
    <string name="signInImageDesc">Placeholder Image</string>

    <string name="user_feed_title">Feed</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_in_title">Sign In</string>


    <!--  Add Review Screen  -->
    <string name="add_review_title">Create Review</string>
    <string name="fab_new_post_desc">New Review</string>
    <string name="book_title_prompt">Book Title</string>
    <string name="add_favorites_prompt">Add to favorites?</string>
    <string name="add_date_prompt">MM/DD/YYYY</string>
    <string name="add_review_title_prompt">Review Title</string>
    <string name="add_review_content_prompt">Review Content</string>
    <string name="add_review_submit_button">Submit</string>

    <!--  Review Detail Screen  -->
    <string name="review_detail_title">View Review</string>
    <string name="detail_book_title">Book Title</string>
    <string name="detail_book_year">Book Year</string>
    <string name="detail_user_name">Reviewer Name</string>
    <string name="detail_review_date">Review Date</string>
    <string name="detail_review_title">Review Title</string>
    <string name="detail_image_description">Placeholder Image</string>
    <string name="detail_review_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa placerat duis ultricies lacus sed turpis tincidunt id. Feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Pretium aenean pharetra magna ac placerat vestibulum lectus mauris. Quis commodo odio aenean sed adipiscing diam donec adipiscing tristique. Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed. Felis bibendum ut tristique et egestas quis ipsum. A diam maecenas sed enim ut sem viverra aliquet eget. Faucibus turpis in eu mi bibendum neque egestas. Nulla facilisi cras fermentum odio eu feugiat pretium nibh. Leo urna molestie at elementum. Odio euismod lacinia at quis risus sed vulputate odio. Eget sit amet tellus cras adipiscing enim eu turpis egestas. Nunc sed id semper risus in. Sit amet est placerat in egestas erat imperdiet. Mattis enim ut tellus elementum sagittis vitae et leo. Vitae aliquet nec ullamcorper sit. Diam phasellus vestibulum lorem sed risus ultricies tristique nulla. Est lorem ipsum dolor sit amet consectetur. Nulla facilisi morbi tempus iaculis urna id volutpat. Sed odio morbi quis commodo odio aenean sed adipiscing. Urna neque viverra justo nec ultrices dui sapien eget. In massa tempor nec feugiat nisl pretium fusce. Sapien nec sagittis aliquam malesuada bibendum arcu. Arcu non odio euismod lacinia at quis risus. Eget aliquet nibh praesent tristique magna sit amet. Diam ut venenatis tellus in. Diam phasellus vestibulum lorem sed risus. Quam adipiscing vitae proin sagittis nisl rhoncus mattis. Sem fringilla ut morbi tincidunt. Vitae semper quis lectus nulla. Iaculis nunc sed augue lacus viverra vitae congue eu. Volutpat diam ut venenatis tellus in. Pharetra magna ac placerat vestibulum. Aliquet nibh praesent tristique magna sit. Nec ultrices dui sapien eget mi proin sed. Fermentum posuere urna nec tincidunt. Enim facilisis gravida neque convallis a cras semper auctor. Arcu non odio euismod lacinia at. Sed elementum tempus egestas sed sed risus. Mauris nunc congue nisi vitae suscipit tellus mauris a diam. Etiam sit amet nisl purus in mollis nunc. Et ultrices neque ornare aenean euismod. Nisl purus in mollis nunc sed id semper risus in. Consectetur adipiscing elit duis tristique. Dis parturient montes nascetur ridiculus mus mauris vitae ultricies. Tortor dignissim convallis aenean et tortor at. Morbi tristique senectus et netus et malesuada. Sed vulputate odio ut enim. Proin nibh nisl condimentum id venenatis a condimentum vitae. Faucibus vitae aliquet nec ullamcorper sit amet. Vitae suscipit tellus mauris a diam. Tortor at auctor urna nunc id cursus metus aliquam. Porta nibh venenatis cras sed felis eget velit. Nunc sed id semper risus in. Sed velit dignissim sodales ut eu sem integer vitae. Eget felis eget nunc lobortis. Accumsan sit amet nulla facilisi morbi tempus iaculis urna id. Interdum consectetur libero id faucibus nisl tincidunt. Sem nulla pharetra diam sit amet nisl suscipit adipiscing. Nisi est sit amet facilisis magna etiam tempor. Quis imperdiet massa tincidunt nunc pulvinar sapien et. Lectus quam id leo in. Cursus vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Quis auctor elit sed vulputate mi sit. Feugiat in fermentum posuere urna nec. Quis commodo odio aenean sed adipiscing. Scelerisque purus semper eget duis at tellus at urna condimentum. Nunc non blandit massa enim. Duis convallis convallis tellus id interdum velit laoreet id donec. Sed faucibus turpis in eu mi bibendum neque egestas congue. Tempus imperdiet nulla malesuada pellentesque elit. Aliquet nibh praesent tristique magna sit amet purus gravida quis. Laoreet id donec ultrices tincidunt arcu. A cras semper auctor neque vitae tempus quam. Lorem sed risus ultricies tristique nulla aliquet enim tortor at. Risus quis varius quam quisque id. Egestas congue quisque egestas diam in arcu. Morbi tincidunt ornare massa eget egestas purus viverra. Tortor vitae purus faucibus ornare suspendisse. Leo duis ut diam quam nulla porttitor massa id neque. Suspendisse potenti nullam ac tortor vitae purus faucibus. At consectetur lorem donec massa sapien. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur. Vitae tortor condimentum lacinia quis vel eros donec ac. Eget est lorem ipsum dolor sit amet consectetur adipiscing.</string>

    <!--  Edit Review Screen  -->
    <string name="edit_review_title">Edit Review</string>
    <string name="edit_review_submit_button">Save Changes</string>

    <!--  Menu Options  -->
    <string name="menu_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_refresh">Refresh Feed</string>

    <!--  Book List Activity  -->
    <string name="list_activity_title">Find A Book</string>
    <string name="menu_search">Search</string>

</resources>
