<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/baseline_logout_white_24"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item android:id="@+id/action_home"
        android:title="@string/menu_home"
        android:icon="@drawable/baseline_home_white_24"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_edit"
        android:title="@string/menu_edit"
        android:icon="@drawable/baseline_edit_white_24"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete"
        android:title="@string/menu_delete"
        android:icon="@drawable/baseline_delete_white_24"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

</menu>