<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/su_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="emailAddress"
            android:hint="@string/email_prompt"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/su_email_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/su_email"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="emailAddress"
            android:hint="@string/email_confirm"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/su_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/su_email_confirm"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="username"
            android:hint="@string/display_name_prompt"
            android:inputType="text"/>

        <EditText
            android:id="@+id/su_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/su_display_name"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="password"
            android:hint="@string/password_prompt"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/su_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/su_password"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="password"
            android:hint="@string/password_confirm"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="40dp"
            app:layout_constraintTop_toBottomOf="@id/su_password_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/signUpButton"
            android:text="@string/cancel_button"
            android:onClick="clickedCancel"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="40dp"
            app:layout_constraintTop_toBottomOf="@id/su_password_confirm"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/sign_up_button"
            android:onClick="clickedSignUp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>