<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewDetailActivity"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/detail_book_image"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:src="@drawable/placeholder"
        android:contentDescription="@string/detail_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/detail_book_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/detail_book_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:paddingHorizontal="5dp"
        android:text="@string/detail_book_title"/>

    <TextView
        android:id="@+id/detail_book_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detail_book_title"
        app:layout_constraintStart_toStartOf="@id/detail_book_title"
        android:text="@string/detail_book_year"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="5dp"/>


    <RatingBar
        android:id="@+id/detail_book_rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/detail_book_year"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="5dp"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginVertical="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/detail_book_rating"
        app:layout_constraintStart_toEndOf="@id/detail_book_image"
        android:background="@color/dividers"/>

    <TextView
        android:id="@+id/detail_reviewer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintStart_toEndOf="@id/detail_book_image"
        android:text="@string/detail_user_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:paddingHorizontal="5dp"/>

    <TextView
        android:id="@+id/detail_review_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detail_reviewer_name"
        app:layout_constraintStart_toEndOf="@id/detail_book_image"
        android:text="@string/detail_review_date"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:paddingHorizontal="5dp"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginVertical="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/detail_review_date"
        app:layout_constraintStart_toEndOf="@id/detail_book_image"
        android:background="@color/dividers"/>

    <TextView
        android:id="@+id/detail_review_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/detail_review_title"
        android:textSize="20sp"/>

    <ScrollView
        android:id="@+id/myScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_review_title"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/detail_review_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_review_content" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>