<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <ImageView
        android:id="@+id/signInImage"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:src="@drawable/placeholder"
        android:contentDescription="@string/signInImageDesc" />

    <EditText
        android:id="@+id/signInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/signInImage"
        app:layout_constraintStart_toStartOf="@id/signInImage"
        app:layout_constraintEnd_toEndOf="@id/signInImage"
        android:autofillHints="emailAddress"
        android:hint="@string/email_prompt"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/signInEmail"
        app:layout_constraintStart_toStartOf="@id/signInEmail"
        app:layout_constraintEnd_toEndOf="@id/signInEmail"
        android:autofillHints="password"
        android:hint="@string/password_prompt"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:text="@string/sign_in_button"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/signInPassword"
        app:layout_constraintStart_toStartOf="@id/signInPassword"
        app:layout_constraintEnd_toEndOf="@id/signInPassword"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton">

        <TextView
            android:id="@+id/signUpLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/forgotPasswordLink"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/sign_up_button"/>

        <TextView
            android:id="@+id/forgotPasswordLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/forgot_password_button"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>