<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewReviewActivity" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <EditText
        android:id="@+id/edit_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginVertical="10dp"
        android:hint="@string/book_title_prompt"/>

    <RatingBar
        android:id="@+id/edit_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_book_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_favorites_text"
        android:layout_marginVertical="10dp"/>

    <CheckBox
        android:id="@+id/edit_favorites_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/edit_rating_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_rating_bar" />

    <TextView
        android:id="@+id/edit_favorites_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/edit_rating_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/edit_rating_bar"
        android:text="@string/add_favorites_prompt"/>

    <EditText
        android:id="@+id/edit_review_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_rating_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="10dp"
        android:hint="@string/add_review_title_prompt"/>

    <EditText
        android:id="@+id/edit_review_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/edit_review_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_review_submit_button"
        android:gravity="top|start"
        android:layout_marginVertical="10dp"
        android:hint="@string/add_review_content_prompt"/>

    <Button
        android:id="@+id/edit_review_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/edit_review_submit_button" />

</androidx.constraintlayout.widget.ConstraintLayout>